Fixed wrong padding in desktop datasets menu

--- a/app/javascript/components/maps/components/menu/components/sections/datasets/styles.scss
+++ b/app/javascript/components/maps/components/menu/components/sections/datasets/styles.scss
@@ -5,6 +5,10 @@
   overflow: auto;
   -webkit-overflow-scrolling: touch;
 
+  @media screen and (min-width: $screen-m) {
+    padding: rem(20px);
+  }
+
   .datasets-header {
     text-transform: uppercase;
     display: flex;
